@@ -38,7 +38,6 @@ import org.apache.commons.exec.ExecuteWatchdog;
 import org.apache.commons.exec.PumpStreamHandler;
 import org.apache.poi.util.IOUtils;
 
-import com.jaeksoft.searchlib.Logging;
 import com.jaeksoft.searchlib.SearchLibException;
 import com.jaeksoft.searchlib.analysis.LanguageEnum;
 import com.jaeksoft.searchlib.util.PropertiesUtils;
@@ -201,7 +200,7 @@ public class OcrManager implements Closeable {
 		DefaultExecutor executor = new DefaultExecutor();
 		ByteArrayOutputStream baos = new ByteArrayOutputStream();
 		try {
-			Logging.info("LOG OCR: " + cmdLine);
+			// Logging.info("LOG OCR: " + cmdLine);
 			PumpStreamHandler streamHandler = new PumpStreamHandler(baos);
 			executor.setStreamHandler(streamHandler);
 			executor.setExitValue(exitValue);
