@@ -23,11 +23,18 @@
 
 package com.jaeksoft.searchlib.util;
 
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.PrintWriter;
 import java.text.DecimalFormat;
+import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import org.apache.commons.codec.binary.Base64;
+import org.apache.commons.io.FileUtils;
+import org.apache.commons.lang.StringEscapeUtils;
 
 public class StringUtils {
 
@@ -127,14 +134,25 @@ public class StringUtils {
 		return text;
 	}
 
-	public static void main(String[] args) {
-		String text = "<p style=\"text-align: right;\"><em>Travailler   dans la tolérance et en cohérence    apportera respect à tous</em><br />Florence, directrice</p><p>Accueil des enfants du lundi au vendredi de 7h30 à 18h30. La crèche ferme une semaine à Noël et quatre semaines en été.</p>";
-		System.out.println(removeTag(text));
-		text = "<p style=\"text-align: right;\"><em>Travailler     dans la tolérance    et en cohérence apportera   respect à tous</em><br />Florence, directrice</p><p>Accueil des enfants du lundi au vendredi de 7h30 à 18h30. La crèche ferme une semaine à Noël et quatre semaines en été.</p>";
-		System.out.println(removeTag(text));
-		text = "test<script>script content</SCRIPT>test<object>object    content</object>test";
-		System.out.println(removeScriptObjectStylePattern.matcher(text)
-				.replaceAll(""));
+	public static void main(String[] args) throws IOException {
+		// String text =
+		// "<p style=\"text-align: right;\"><em>Travailler   dans la tolérance et en cohérence    apportera respect à tous</em><br />Florence, directrice</p><p>Accueil des enfants du lundi au vendredi de 7h30 à 18h30. La crèche ferme une semaine à Noël et quatre semaines en été.</p>";
+		// System.out.println(removeTag(text));
+		// text =
+		// "<p style=\"text-align: right;\"><em>Travailler     dans la tolérance    et en cohérence apportera   respect à tous</em><br />Florence, directrice</p><p>Accueil des enfants du lundi au vendredi de 7h30 à 18h30. La crèche ferme une semaine à Noël et quatre semaines en été.</p>";
+		// System.out.println(removeTag(text));
+		// text =
+		// "test<script>script content</SCRIPT>test<object>object    content</object>test";
+		// System.out.println(removeScriptObjectStylePattern.matcher(text)
+		// .replaceAll(""));
+
+		List<String> lines = FileUtils.readLines(new File(args[0]));
+		FileWriter fw = new FileWriter(new File(args[1]));
+		PrintWriter pw = new PrintWriter(fw);
+		for (String line : lines)
+			pw.println(StringEscapeUtils.unescapeHtml(line));
+		pw.close();
+		fw.close();
 	}
 
 	public static final String removeTag(String text, String[] allowedTags) {
